@@ -1,0 +1,4 @@
+# Config file for emacs-daemon
+
+# Space-separated list of users for whom an Emacs daemon should be started
+EMACSUSERS=""
