@@ -1,0 +1,42 @@
+#!/sbin/runscript
+# $Header: $
+# Copyright 2008 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+
+EMACS=/usr/bin/emacs
+
+checkconfig() {
+    local has_daemon=$(${EMACS} -batch -q --no-site-file \
+	--eval "(princ (fboundp 'daemonp))")
+    if [ "${has_daemon}" != t ]; then
+	eerror "${EMACS} does not support running as a daemon"
+	return 1
+    fi
+
+    if [ -z "${EMACSUSERS}" ]; then
+	eerror "You must setup EMACSUSERS in /etc/conf.d/emacs-daemon first"
+	return 1
+    fi
+
+    return 0
+}
+
+start() {
+    local user fail=0
+    checkconfig || return 1
+
+    for user in ${EMACSUSERS}; do
+	ebegin "Starting Emacs daemon for ${user}"
+	start-stop-daemon --start --chuid ${user} --user ${user} \
+	    --startas emacs-daemon --exec "${EMACS}" -- --daemon &>/dev/null
+	eend $? || fail=1
+    done
+
+    return ${fail}
+}
+
+stop() {
+    ebegin "Stopping all Emacs daemons"
+    start-stop-daemon --stop --startas emacs-daemon --exec "${EMACS}"
+    eend $?
+}
